# actix-server

./: .env  .gitignore  Cargo.toml  README.md  urls.http
.github/workflows/: rust.yml
email-templates/: welcome.html
http/: auth.http  download.http  email.http  errors.http  private.http  upload.http  validation.http
scripts/sql/: init.sql
src/: main.rs
src/Json/: README.md  json_examples.rs  mod.rs
src/auth/: login.rs  mod.rs  register.rs
src/downloads/: mod.rs
src/email/: mod.rs
src/errors/: mod.rs
src/middleware/: mod.rs  private.rs
src/models/auth/: mod.rs  register.rs
src/private/: mod.rs
src/types/: token.rs
src/uploads/: mod.rs
src/utils/: email_sender.rs  errors.rs  mod.rs  password_hash.rs  redis_utils.rs  response.rs  uuid_utils.rs
src/validations/: mod.rs
static/: index.css  index.html  login.js
