[package]
name = "actix-server"
version = "0.1.0"
authors = ["SaiUmeshDhanewar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#core_framework
actix-web = "2.0.0"
actix-rt = "1.0.0"

#json_parsers
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

#Database
deadpool-postgres = "0.5.4"
tokio-postgres = { version = "0.5.2", features = ["with-serde_json-1"] }

#ENV_VARIABLES
dotenv = "0.15.0"

r2d2_redis = "0.13.0"
r2d2 = "0.8.8"

#Password hashing
rust-argon2 = "0.8.1"

uuid = { version = "0.8.1", features = ["v4"] }

# async futures
futures = "0.3.4"

# for errors
thiserror = "1.0.18"

# for files download and static files
actix-files = "0.2.1"

# email
lettre = "0.9.3"
lettre_email = "0.9.4"

# validations
validator = "0.10.0"
validator_derive = "0.10.0"
